HADOOP-19941. ABFS: Address Photon ListBlobs review feedback
Blob endpoint / Photon (Apache Arrow) ListBlobs review fixes:

- AbfsBlobClient: gate Photon on non-HNS accounts (the Blob endpoint rejects
  an Arrow ListBlobs request on HNS with 409, which the XML fallback cannot
  recover), use equalsIgnoreCase for the ACCEPT header removal, count the
  rename-recovery retry as a Photon request so the request/response/fallback
  metric invariant holds, and classify the response/fallback metric only on
  HTTP 200.
- ArrowListBlobParser: fail loudly when the mandatory Name column is absent,
  resolve batch columns once outside the batch loop, handle timezone-aware
  Arrow timestamp vectors (epoch values) when normalizing to RFC 1123, reject
  negative (unsigned-overflow) content lengths, log malformed length values,
  and use a named constant for the numeric-true value.
- DateTimeUtils: add formatInstantToRfc1123 for the epoch timestamp path.
- blobEndpoint.md: document the non-HNS restriction and the Java 17+
  --add-opens=java.base/java.nio requirement for Arrow.
- Tests: fix ByteArrayOutputStream scoping, use constants for JDK tool
  resolution, and add Arrow parser coverage (TZ timestamp, two batches in one
  stream, negative and non-numeric length, hdi_isfolder="1", name "/").

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>